--- a/src/View_Controller/AddPartScreen.fxml
+++ b/src/View_Controller/AddPartScreen.fxml
@@ -1,44 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.AddPartScreen">
+<AnchorPane prefHeight="480.0" prefWidth="440.0" style="-fx-background-color: a9a9a9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.AddPartScreen">
    <children>
       <Label layoutX="14.0" layoutY="47.0" prefHeight="30.0" prefWidth="90.0" text="Add Part">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="107.0" layoutY="111.0">
+      <RadioButton layoutX="123.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="138.0" text="   In-House">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </RadioButton>
+      <RadioButton layoutX="261.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="138.0" text="   Outsourced">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </RadioButton>
+      <AnchorPane layoutX="38.0" layoutY="90.0" prefHeight="328.0" prefWidth="365.0">
          <children>
-            <TextField layoutX="72.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Part ID">
-               <font>
-                  <Font name="System Italic" size="16.0" />
-               </font>
-            </TextField>
-            <Label layoutY="6.0" prefHeight="20.0" prefWidth="38.0" text="ID">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
+            <AnchorPane layoutY="14.0">
+               <children>
+                  <TextField layoutX="98.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Part ID">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="20.0" prefWidth="38.0" text="ID">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="-1.0" layoutY="68.0">
+               <children>
+                  <TextField layoutX="100.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Part Name">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="25.0" prefWidth="53.0" text="Name">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="-2.0" layoutY="113.0">
+               <children>
+                  <TextField layoutX="100.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Inv. Level">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="25.0" prefWidth="79.0" text="Inventory">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="-1.0" layoutY="162.0">
+               <children>
+                  <TextField layoutX="100.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Price">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="25.0" prefWidth="79.0" text="Price">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="214.0" prefHeight="37.0" prefWidth="256.0">
+               <children>
+                  <TextField layoutX="100.0" prefHeight="37.0" prefWidth="66.0" promptText="Max">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <TextField layoutX="190.0" prefHeight="37.0" prefWidth="66.0" promptText="Min">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="25.0" prefWidth="79.0" text="Inv. Level">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="265.0">
+               <children>
+                  <TextField layoutX="98.0" prefHeight="37.0" prefWidth="158.0" promptText="(Variable)">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutY="6.0" prefHeight="25.0" prefWidth="90.0" text="(Variable)">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="107.0" layoutY="159.0">
-         <children>
-            <TextField layoutX="72.0" prefHeight="37.0" prefWidth="158.0" promptText="Enter Part ID" text="Enter Part Name">
-               <font>
-                  <Font name="System Italic" size="16.0" />
-               </font>
-            </TextField>
-            <Label layoutY="6.0" prefHeight="25.0" prefWidth="53.0" text="Name">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+      <Button fx:id="addPartScreenCancelButton" layoutX="337.0" layoutY="418.0" mnemonicParsing="false" onAction="#setAddPartScreenCancelButton" prefHeight="37.0" prefWidth="66.0" text="Cancel">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="addPartScreenSaveButton" layoutX="250.0" layoutY="418.0" mnemonicParsing="false" onAction="#setAddPartScreenSaveButton" prefHeight="37.0" prefWidth="66.0" text="Save">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
