--- a/src/View_Controller/AddPartScreen.fxml
+++ b/src/View_Controller/AddPartScreen.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--
+         Author: kcmodev
+         Class: C482 Software 1
+         Email: ****@wgu.edu
+         Date Submitted: 7/21/2020
+-->
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
