--- a/src/gui/AddProductScreen.fxml
+++ b/src/gui/AddProductScreen.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="497.0" prefWidth="685.0" style="-fx-background-color: a9a9a9;" styleClass="root" stylesheets="@Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.AddProductScreenController">
+<AnchorPane prefHeight="497.0" prefWidth="685.0" style="-fx-background-color: a9a9a9;" styleClass="root" stylesheets="@../controller/Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddProductScreenController">
    <children>
       <Label id="textLabel" layoutX="14.0" layoutY="14.0" prefHeight="39.0" prefWidth="112.0" text="Add Product">
          <font>
