--- a/src/gui/ModifyProductScreen.fxml
+++ b/src/gui/ModifyProductScreen.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="493.0" prefWidth="683.0" style="-fx-background-color: a9a9a9;" stylesheets="@Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyProductScreenController">
+<AnchorPane prefHeight="493.0" prefWidth="683.0" style="-fx-background-color: a9a9a9;" stylesheets="@../controller/Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyProductScreenController">
     <children>
         <Label id="textLabel" layoutX="14.0" layoutY="14.0" prefHeight="39.0" prefWidth="158.0" text="Modify Product">
             <font>
