--- a/src/gui/AddPart.fxml
+++ b/src/gui/AddPart.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-         Author: Steven Christensen
+         Author: kcmodev
          Class: C482 Software 1
-         Email: schr206@wgu.edu
+         Email: ****@wgu.edu
          Date Submitted: 7/21/2020
 -->
 
@@ -15,7 +15,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: a9a9a9;" stylesheets="@Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.AddPartScreenController">
+<AnchorPane prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: a9a9a9;" stylesheets="@../controller/Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPartController">
    <children>
       <Label id="textLabel" fx:id="titleLabel" layoutX="14.0" layoutY="47.0" prefHeight="30.0" prefWidth="90.0" text="Add Part">
          <font>
