--- a/src/gui/ModifyProduct.fxml
+++ b/src/gui/ModifyProduct.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-         Author: Steven Christensen
+         Author: kcmodev
          Class: C482 Software 1
-         Email: schr206@wgu.edu
+         Email: *****@wgu.edu
          Date Submitted: 7/21/2020
 -->
 
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="493.0" prefWidth="683.0" style="-fx-background-color: a9a9a9;" stylesheets="@Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyProductScreenController">
+<AnchorPane prefHeight="493.0" prefWidth="683.0" style="-fx-background-color: a9a9a9;" stylesheets="@../controller/Stylesheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyProductController">
     <children>
         <Label id="textLabel" layoutX="14.0" layoutY="14.0" prefHeight="39.0" prefWidth="158.0" text="Modify Product">
             <font>
